# macvert

./: .gitignore  README.rst  TODO.txt  macvert.ini  setup.cfg  setup.py  tox.ini  web.py  wsgi.py
docs/source/: conf.py  index.rst  module.rst
macvert/: cli.py  logic.py  mac_converter.py  mac_operations.py  macs.txt  new_macs.txt  web.py
macvert/data/: new_mac_list.txt
macvert/templates/: index.html
