[metadata]
name = macvert
author = Eric Milan
author-email = emilan.etmilan.org
license = MIT
long_description = file: README.rst
url = https://github.com/emilan21/mac_convertor
requires-python = >=3.6
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python